Enabled config server and added properties of limits service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=spring-cloud-config-server
+spring.profiles.active=native
 server.port=8888
+
+# Native File Backend Config
+spring.cloud.config.server.native.searchlocations=classpath:config/{application}
